--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -315,4 +315,18 @@ button.btn:hover {
   font-size: 1.2rem;
   margin-bottom: 20px;
 }
-
+.resume-home{
+  text-decoration: none;
+}
+.skil-item{
+  max-width: 250px;
+  min-width: 150px;
+  flex: 1;
+}
+.skil-item:hover{
+  border: 1px solid #fd7e14 !important;
+  transform:translateY(-10px);
+  transition-duration: 0.5s;
+  cursor:pointer;
+  box-shadow: 0px 0px 5px 1px #fd7e14;
+}
